Update fomular calc finalPrice in Book model, change stuctures controller and routes
