# app/Http/Controllers/Api/OrderController.php
@@ -3,14 +3,13 @@
 namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
-use App\Http\Requests\FilterRequest;
-use App\Repositories\ShopRepository;
+use Illuminate\Http\Request;
 
 /**
  * @OA\Get(
- *      path="/api/shop",
- *      operationId="getListShopByFilteringAndSorting",
- *      tags={"Shop"},
+ *      path="/api/order",
+ *      operationId="getOrderList",
+ *      tags={"Order"},
  *      summary="Get list/filter/sort of products",
  *      description="Returns list/filter/sort of products",
  *      @OA\Response(
@@ -20,24 +19,16 @@ use App\Repositories\ShopRepository;
  *)
  */
 
-class ShopController extends Controller
+class OrderController extends Controller
 {
-
-    private ShopRepository $shopRepository;
-    public function __construct(ShopRepository $shopRepository)
-    {
-        $this->shopRepository = $shopRepository;
-    }
-
     /**
      * Display a listing of the resource.
      *
      * @return \Illuminate\Http\Response
      */
-    public function index(FilterRequest $request)
+    public function index()
     {
-        $queryParamsArr = $this->shopRepository->filterQueryParams($request);
-        return $this->shopRepository->filterProducts(...$queryParamsArr);
+        //
     }
 
     /**
@@ -46,7 +37,7 @@ class ShopController extends Controller
      * @param  \Illuminate\Http\Request  $request
      * @return \Illuminate\Http\Response
      */
-    public function store(FilterRequest $request)
+    public function store(Request $request)
     {
         //
     }
@@ -69,7 +60,7 @@ class ShopController extends Controller
      * @param  int  $id
      * @return \Illuminate\Http\Response
      */
-    public function update(FilterRequest $request, $id)
+    public function update(Request $request, $id)
     {
         //
     }
